correctly working quiz generation and quiz-list,performance